tests/snapshots/integration__pgm004_finding_details.snap
---
source: tests/integration.rs
assertion_line: 276
expression: pgm004
---
- rule_id: PGM004
  severity: Major
  message: "Table 'audit_log' has no primary key."
  file: repos/all-rules/migrations/V002__violations.sql
  start_line: 8
  end_line: 12
