tests/snapshots/integration__pgm005_finding_details.snap
---
source: tests/integration.rs
assertion_line: 298
expression: pgm005
---
- rule_id: PGM005
  severity: Info
  message: "Table 'settings' uses UNIQUE NOT NULL instead of PRIMARY KEY. Functionally equivalent but PRIMARY KEY is conventional and more explicit."
  file: repos/all-rules/migrations/V003__more_violations.sql
  start_line: 4
  end_line: 9
