tests/snapshots/integration__pgm014_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'events' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: repos/all-rules/migrations/V005__new_violations.sql
  start_line: 8
  end_line: 9
