tests/snapshots/integration__pgm017_finding_details.snap
---
source: tests/integration.rs
assertion_line: 405
expression: pgm017
---
- rule_id: PGM017
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'events' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: repos/all-rules/migrations/V005__new_violations.sql
  start_line: 4
  end_line: 6
