tests/snapshots/integration__pgm101_timestamp_without_tz.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM101
  severity: Minor
  message: "Column 'created_at' on 'audit_log_v2' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: repos/all-rules/migrations/V004__dont_do_this_types.sql
  start_line: 4
  end_line: 8
