tests/snapshots/integration__pgm102_timestamptz_zero_precision.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM102
  severity: Minor
  message: "Column 'updated_at' on 'audit_log_v2' uses 'timestamptz(0)'. Precision 0 causes rounding, not truncation — a value of '23:59:59.9' rounds to the next day. Use full precision and format on output instead."
  file: repos/all-rules/migrations/V004__dont_do_this_types.sql
  start_line: 11
  end_line: 11
